# AsteroidDatabase

./: LICENSE  README.md  pyproject.toml  requirements.txt  run.py  wsgi.py
app/: __init__.py  models.py  routes.py
instance/: sqlite.db
static/css/: 404.css  base_template.css  style.css  user_guide.css  welcome_page.css
templates/: 404.html  asteroid_table.html  base_template.html  user_guide.html  welcome_page.html
